--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-asgiref==3.8.1
-Django==4.2.16
-gunicorn==20.1.0
-sqlparse==0.5.1
+asgiref==3.10.0
+dj-database-url==0.5.0
+Django==5.2.7
+gunicorn==23.0.0
+packaging==25.0
+psycopg2==2.9.11
+psycopg2-binary==2.9.10
+python-dotenv==1.1.1
+sqlparse==0.5.3
+tzdata==2025.2
+whitenoise==6.11.0
